Fixed incorrect prefix spacing and coloring

--- a/src/components/TextField/TextField.scss
+++ b/src/components/TextField/TextField.scss
@@ -2,6 +2,7 @@ $textfield-backdrop-offset: -(border-width(thick));
 $backdrop-horizontal-spacing: spacing(tight) * 1.5;
 $addon-horizontal-spacing: 0.25em;
 $spinner-icon-size: rem(12px);
+$prefix-horizontal-spacing: spacing(tight);
 
 $stacking-order: (
   contents: 20,
@@ -13,8 +14,12 @@ $stacking-order: (
   position: relative;
   display: flex;
   align-items: center;
-  color: color('ink', 'lightest');
+  color: color('ink', 'lighter');
   cursor: text;
+
+  svg {
+    fill: color('ink', 'lighter');
+  }
 }
 
 .multiline {
@@ -30,7 +35,7 @@ $stacking-order: (
 }
 
 .hasValue {
-  color: color('ink');
+  color: color('ink', 'lighter');
 }
 
 .focus > .Input,
@@ -74,6 +79,10 @@ $stacking-order: (
   > .Backdrop {
     background-color: color('sky', 'lighter');
     box-shadow: none;
+  }
+
+  svg {
+    fill: color('ink', 'lightest');
   }
 }
 
@@ -186,7 +195,7 @@ $stacking-order: (
   position: relative;
   z-index: z-index(contents, $stacking-order);
   flex: 0 0 auto;
-  margin: 0 $addon-horizontal-spacing 0 $backdrop-horizontal-spacing;
+  margin: 0 $prefix-horizontal-spacing 0 $backdrop-horizontal-spacing;
   color: currentColor;
   pointer-events: none;
 }
